--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,206 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
+@import url("https://pro.fontawesome.com/releases/v5.10.0/css/all.css");
+:root {
+    --var-primary-color: red;
+    --var-secondary-color: blue;
+    --var-text-primary: rgb(43, 41, 41);
 }
 
 * {
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    color: var(--var-text-primary);
+    font-family: 'Open Sans', sans-serif;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+}
+
+body {
+    background:rgb(252, 252, 252);
+}
+/* Navbar style */
+#nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffff;
+}
+#nav {
+    box-shadow: 0px 0px 5px #1f1f1f3d;
+}
+
+.nav-items > li {
+    padding: 10px;
+}
+
+#nav a {
+    text-decoration: none;
+    color: var(--var-text-primary);
+}
+
+/* Dropdown style */
+
+#dropdown ul {
+    display: none;
+    list-style: none;
+}
+
+#dropdown:focus-within ul{ 
+    display: block;
+    position: absolute;
+    background-color: #ffffff;
+    padding: 10px;
+    margin-top: 5px;
+    right: 21%;
+    border-radius: 3px;
+    border: 1px solid rgba(31, 31, 31, 0.205);
+}
+
+
+
+main {
+    padding: 80px 20px;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+}
+.container {
+  width: 80vw;
+}
+
+#search {
+    width: 40vw;
+    padding: 8px 20px 8px 20px;
+    border: 1px solid #2929292c;
+}
+
+#search:focus {
+    outline: none;
+}
+
+
+#grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
+    place-items: start;
+    column-gap: 20px;
+}
+.sidebar {
+    width: 250px;
+}
+.sidebar-items {
+    text-decoration: none;
+    padding: 5px 20px 5px 20px;
+    color: var(--var-text-primary);
+    margin-bottom: 5px;
+}
+
+.sidebar-items:hover{
+    color: rgb(66, 69, 255);
+    border-radius: 5px;
+    background-color: rgba(180, 163, 255, 0.082);
+}
+.sidebar-items:hover a {
+    color: rgb(66, 69, 255);
+}
+
+.card {
+    background-color: white;
+    box-shadow: 0px 4px 9px -7px black;
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
+.flex {
+    display: flex;
+}
+
+.user-info {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    grid-template-areas: 
+            "img username"
+            "img date";
+    margin-bottom: 20px;
+}
+
+.avatar {
+    height: 50px;
+    grid-area: img;
+}
+.user-name {
+    grid-area: username;
+}
+.date {
+    grid-area: date;
+    font-size: 0.8em;
+}
+
+.post-title {
+    font-size: 1.2em;
+    display: block;
+}
+
+.tags a {
+    color:rgb(43, 41, 41);
+    padding-right: 10px;
+    font-size: 0.5em;
+}
+.tags a::before {
+    content: "#";
+}
+
+/* Button css */
+.btn {
+    font-size: 0.7em;
+    padding: 5px 10px 5px 10px;
+    border-radius: 5px;
+    border: none;
+    margin: 2px;
+    padding: 8px 10px 8px 10px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgba(235, 233, 233, 0.575);
+}
+
+.btn-post, .btn-post:hover {
+    background-color: rgb(101, 169, 224);
+    color: white;
+}
+.card-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-react.active {
+    color: rgb(223, 57, 57);
+    background-color: rgba(247, 111, 111, 0.459);
+}
+
+.text-red {
+    color: rgb(223, 57, 57);
+}
+
+.card-title img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* Media queries */
+@media (max-width: 1000px) {
+    #grid {
+        grid-template-columns: 1fr;
+    }
+    #grid .sidebar {
+        display: none;
+    }
 }
